addons/ingress/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-internal
  namespace: nginx
spec:
  selector:
    app: MyTestApp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
