addons/ingress/nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-myservicea
  namespace: nginx
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: ngx.vi7.local
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: nginx-internal
            port:
              number: 8080
